--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
 <main class=main>
 <article class=first-entry>
 <header class=entry-header>
-<h2>How Not to Be a Leader
+<h2>How NOT to be a Leader
 </h2>
 </header>
 <section class=entry-content>
-<p>In this blog post we’ll explore some of the practices you should NOT follow if you pretend to improve your leadership
+<p>In this blogpost we’ll explore some of the practices you should NOT follow if you pretend to improve your leadership
 Based on personal experience in a leadeship program
 DON’T stablish vague, unclear targets You, as a leader, need to be a source of trust. It’s your task to make people following you have a feel of clear understanding what are the goals and how those goals are achieved.
 Not being clear about what to do or sending contradictory messages are perfect example of what you shouldn’t do...</p>
 </section>
 <footer class=entry-footer><span title="2022-01-25 14:25:54 +0100 +0100">January 25, 2022</span></footer>
-<a class=entry-link aria-label="post link to How Not to Be a Leader" href=https://AlbertoSH.github.io/posts/how-not-to-be-a-leader/></a>
+<a class=entry-link aria-label="post link to How NOT to be a Leader" href=https://AlbertoSH.github.io/posts/how-not-to-be-a-leader/></a>
 </article>
 </main>
 <footer class=footer>
